# protobuf

./: .hgignore  .hgtags  my-protobuf.cabal  protobuf-grammar.cabal  protobuf.cabal  protobuf.ebnf
Data/: Protobuf.hs
Data/Protobuf/: API.hs  AST.hs  Classes.hs  CodeGen.hs  DataTree.hs  FileIO.hs  Imports.hs  Names.hs  TH.hs  Transform.hs  Types.hs
Data/Protobuf/Grammar/: Lexer.x  Parser.y
Data/Protobuf/Internal/: AST.hs  Control.hs  IO.hs  Names.hs  Transform.hs  Types.hs
Data/Protobuf/Serialize/: Message.hs  Protobuf.hs  VarInt.hs
Data/Serialize/: Protobuf.hs  VarInt.hs
benchmarks/: bench.hs
protobuf-grammar/: LICENSE  driver.hs  protobuf-grammar.cabal
protobuf-grammar/Data/Protobuf/: CodeGen.hs  DataTree.hs  FileIO.hs  Transform.hs  Types.hs
protobuf-grammar/Data/Protobuf/Grammar/: Lexer.x  Parser.y
protobuf-lib/: protobuf-lib.cabal
protobuf-lib/Data/Protobuf/: Classes.hs  Imports.hs
protobuf-lib/Data/Serialize/: Protobuf.hs  VarInt.hs
test/: QC.hs  test.proto
