Name:           my-protobuf
Version:        0.0.5.0
Cabal-Version:  >= 1.8
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       http://bitbucket.org/Shimuuar/protobuf-grammar
Category:       Data
Build-Type:     Simple
Synopsis:       Compiler for google protocol buffers
Description:
  <<<DESCRIPTION>>>

source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/protobuf-grammar

Library
  Ghc-options:          -O2 -Wall
  Build-tools:          alex, happy
  Build-Depends:
    base           >=4.7 && <5,
    bytestring,
    containers,
    text,
    mtl            > 2,
    transformers,
    cereal,
    uniplate,
    directory,
    array,
    template-haskell >= 2.9,
    groom,
    fixed-vector        >= 0.6.4,
    fixed-vector-hetero >= 0.1
  Exposed-modules:
    Data.Protobuf
    Data.Protobuf.API
    Data.Protobuf.TH
    Data.Protobuf.Serialize.VarInt
    Data.Protobuf.Serialize.Protobuf
    Data.Protobuf.Serialize.Message
  Other-modules:
    Data.Protobuf.Grammar.Parser
    Data.Protobuf.Grammar.Lexer
    Data.Protobuf.Internal.AST
    Data.Protobuf.Internal.Control
    Data.Protobuf.Internal.IO
    Data.Protobuf.Internal.Names
    Data.Protobuf.Internal.Types
    Data.Protobuf.Internal.Transform

Test-suite test
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: test
  Main-is:        QC.hs
  Ghc-options:    -O2 -Wall
  Build-Depends:
    base >=3 && <5,
    my-protobuf,
    fixed-vector-hetero,
    text,
    containers,
    cereal,
    tasty,
    tasty-quickcheck,
    QuickCheck

Benchmark benchmarks
  Type:           exitcode-stdio-1.0
  Main-is:        bench.hs
  hs-source-dirs: benchmarks
  Ghc-options:    -O2 -Wall
  build-depends:
    base >=3 && <5,
    my-protobuf,
    fixed-vector-hetero,
    containers,
    cereal,
    criterion
