Name:           protobuf-lib
Version:        0.1
Cabal-Version:  >= 1.6
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       http://bitbucket.org/Shimuuar/protobuf-grammar
Category:       Data
Build-Type:     Simple
Synopsis:       Library for generated code
Description:
  Part of protocol buffers implementation

source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/protobuf

Library
  Build-Depends:        base >=3 && <5,
                        containers,
                        bytestring,
                        cereal
  Exposed-modules:      Data.Protobuf.Classes
                        Data.Protobuf.Imports
                        Data.Serialize.VarInt
                        Data.Serialize.Protobuf
